--- a/delivery/pom.xml
+++ b/delivery/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.springframework.pulsar</groupId>
       <artifactId>spring-pulsar-spring-boot-starter</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
     </dependency>
   </dependencies>
 
