--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
 logging.level.root=WARN
-logging.level.org.apache.pulsar.demo=INFO
+logging.level.io.streamnative=INFO
 logging.level.org.apache.pulsar.common.util.netty=ERROR
 logging.level.org.apache.pulsar.shade.io.netty.resolver.dns=ERROR
