--- a/website/compose.yml
+++ b/website/compose.yml
@@ -1,6 +1,12 @@
 version: '2'
 
 services:
+  pulsar:
+    image: apachepulsar/pulsar:2.11.1
+    command: bin/pulsar standalone
+    ports:
+      - '6650:6650'
+      - '8080:8080'
   redis:
     image: docker.io/bitnami/redis:7.0
     environment:
