upgrade to Spring Boot 3.2.0 & spring-boot-starter-pulsar 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.pulsar.demo</groupId>
-  <artifactId>reactor</artifactId>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.0</version>
+  </parent>
+  <groupId>io.streamnative.demo.beerfactory</groupId>
+  <artifactId>beerfactory-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>reactor</name>
+  <name>pulsar-demo-parent</name>
   <modules>
     <module>website</module>
     <module>delivery</module>
