--- a/delivery/pom.xml
+++ b/delivery/pom.xml
@@ -3,13 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+      <groupId>io.streamnative.demo.beerfactory</groupId>
+      <artifactId>beerfactory-parent</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>org.apache.pulsar.demo</groupId>
-  <artifactId>delivery</artifactId>
+  <artifactId>beerfactory-delivery</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>delivery</name>
   <description>Delivery Microservice</description>
@@ -18,9 +16,8 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.springframework.pulsar</groupId>
-      <artifactId>spring-pulsar-spring-boot-starter</artifactId>
-      <version>0.1.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-pulsar</artifactId>
     </dependency>
   </dependencies>
 
@@ -32,22 +29,4 @@
       </plugin>
     </plugins>
   </build>
-  <repositories>
-    <repository>
-      <id>spring-milestones</id>
-      <name>Spring Milestones</name>
-      <url>https://repo.spring.io/milestone</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>spring-snapshots</id>
-      <name>Spring Snapshots</name>
-      <url>https://repo.spring.io/snapshot</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
-  </repositories>
 </project>
