--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -3,16 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+      <groupId>io.streamnative.demo.beerfactory</groupId>
+      <artifactId>beerfactory-parent</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>org.apache.pulsar.demo</groupId>
-  <artifactId>warehouse</artifactId>
+  <artifactId>beerfactory-warehouse</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>warehouse</name>
-  <description>Website</description>
+  <description>Warehouse</description>
   <properties>
     <java.version>17</java.version>
   </properties>
@@ -33,12 +31,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.springframework.pulsar</groupId>
-      <artifactId>spring-pulsar-spring-boot-starter</artifactId>
-      <version>0.1.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-pulsar</artifactId>
     </dependency>
-
-
   </dependencies>
 
   <build>
@@ -49,24 +44,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <repositories>
-    <repository>
-      <id>spring-milestones</id>
-      <name>Spring Milestones</name>
-      <url>https://repo.spring.io/milestone</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>spring-snapshots</id>
-      <name>Spring Snapshots</name>
-      <url>https://repo.spring.io/snapshot</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
-  </repositories>
 
 </project>
