--- a/website/pom.xml
+++ b/website/pom.xml
@@ -3,13 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+      <groupId>io.streamnative.demo.beerfactory</groupId>
+      <artifactId>beerfactory-parent</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>org.apache.pulsar.demo</groupId>
-  <artifactId>website</artifactId>
+  <artifactId>beerfactory-website</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>website</name>
   <description>Website</description>
@@ -22,9 +20,8 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.pulsar</groupId>
-      <artifactId>spring-pulsar-spring-boot-starter</artifactId>
-      <version>0.1.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-pulsar</artifactId>
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -44,22 +41,4 @@
       </plugin>
     </plugins>
   </build>
-  <repositories>
-      <repository>
-          <id>spring-milestones</id>
-          <name>Spring Milestones</name>
-          <url>https://repo.spring.io/milestone</url>
-          <snapshots>
-              <enabled>false</enabled>
-          </snapshots>
-      </repository>
-      <repository>
-          <id>spring-snapshots</id>
-          <name>Spring Snapshots</name>
-          <url>https://repo.spring.io/snapshot</url>
-          <releases>
-              <enabled>false</enabled>
-          </releases>
-      </repository>
-  </repositories>
 </project>
