--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <properties>
+    <spring.pulsar.version>1.0.2</spring.pulsar.version>
+  </properties>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -17,4 +20,13 @@
     <module>delivery</module>
     <module>warehouse</module>
   </modules>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.pulsar</groupId>
+        <artifactId>spring-pulsar</artifactId>
+        <version>${spring.pulsar.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
