add beer stock reader example

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>website</module>
     <module>delivery</module>
     <module>warehouse</module>
+    <module>stock-reader</module>
   </modules>
   <dependencyManagement>
     <dependencies>
